cl & cleanup